[package]
name = "ixfeed"
version = "0.2.0-alpha.1"
edition = "2021"
description = "RSS/Atom/JSON feed watcher that submits new URLs to IndexNow-compatible search engines"
license = "AGPL-3.0-or-later"
publish = false
authors = ["Andre Franca <andre@abf.li>"]
repository = "https://github.com/andrefcodes/ixfeed"
homepage = "https://github.com/andrefcodes/ixfeed"
keywords = ["indexnow", "seo", "rss", "atom", "search-engine"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "blocking", "rustls"] }
feed-rs = "2"
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
dialoguer = "0.12"
urlencoding = "2"
url = "2"
regex = "1"

[[bin]]
name = "ixfeed"
path = "src/main.rs"
